Simplify list creation.